<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_input_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:text="@string/activity_button_input_driver" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/button_rainbow_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:text="@string/activity_rainbow_hat_driver" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/button_input_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:text="@string/activity_inputs_components" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/button_display_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:text="@string/activity_display_components" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/button_other_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:text="@string/activity_other_components" />
    </LinearLayout>

</ScrollView>